# idc409-project

./: .gitignore  README.md  config.nix  flake.nix  pyproject.toml
presentation/: custom-outline.typ  main.typ  theme.typ
src/: classic.py  cnn.py  presentation-images.py
src/__marimo__/: classic.html  classic.ipynb  cnn.html  cnn.ipynb
