[project]
name = "idc409-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imutils>=0.5.4",
    "keras>=3.11.3",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
